# home-clock

./: Cargo.toml
.claude/: settings.local.json
doc/: todo.md
src/: clock.rs  font.rs  forecast.rs  framebuffer.rs  main.rs  weather.rs
