[package]
name = "home_clock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
eframe = "0.33.3"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }