[package]
name = "home_clock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0.149"
serde = { version = "1.0", features = ["derive"] }
minifb = "0.28.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
image = "0.25"
